# CountingBloomFilter

./: CMakeLists.txt  README.md
BloomFilter/: CountingBloomFilter.h  CustomHasher.h  CustomObject.h  Hasher.h
data/: words.txt
test/: CMakeLists.txt  test_custom.cpp  test_hash_bitset.cpp  test_hash_str.cpp  test_hasher.cpp  test_words.cpp
